# siphon

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  client.example.toml  cliff.toml  docker-compose.yml  release-plz.toml  server.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/siphon/: CHANGELOG.md  Cargo.toml
crates/siphon-common/: CHANGELOG.md  Cargo.toml
crates/siphon-common/src/: error.rs  lib.rs  tls.rs
crates/siphon-e2e/: Cargo.toml
crates/siphon-e2e/src/: certificates.rs  harness.rs  lib.rs  mock_dns.rs  mock_service.rs  mock_tcp_service.rs  test_client.rs
crates/siphon-e2e/tests/: http_tunnel.rs  tcp_tunnel.rs
crates/siphon-protocol/: CHANGELOG.md  Cargo.toml
crates/siphon-protocol/src/: codec.rs  lib.rs  messages.rs
crates/siphon-secrets/: CHANGELOG.md  Cargo.toml
crates/siphon-secrets/src/: error.rs  lib.rs  resolver.rs  uri.rs
crates/siphon-secrets/src/backends/: base64.rs  env.rs  file.rs  keychain.rs  mod.rs  onepassword.rs
crates/siphon-server/: CHANGELOG.md  Cargo.toml
crates/siphon-server/src/: cloudflare.rs  config.rs  control_plane.rs  dns_provider.rs  http_plane.rs  lib.rs  main.rs  router.rs  state.rs  tcp_plane.rs
crates/siphon-tui/: CHANGELOG.md  Cargo.toml
crates/siphon-tui/src/: config.rs  lib.rs  metrics.rs
crates/siphon-tui/src/setup/: mod.rs  wizard.rs
crates/siphon-tui/src/ui/: app.rs  dashboard.rs  mod.rs  widgets.rs
crates/siphon/src/: config.rs  connector.rs  forwarder.rs  main.rs  tcp_forwarder.rs
