[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/remikalbe/siphon"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# HTTP client (for Cloudflare API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dashmap = "6"
bytes = "1"
parking_lot = "0.12"

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
chrono = "0.4"
dirs = "6.0.0"
shellexpand = "3"
rustyline = "17.0.2"

# Workspace crates (version required for crates.io publishing)
siphon-protocol = { path = "crates/siphon-protocol", version = "0.1.0" }
siphon-common = { path = "crates/siphon-common", version = "0.1.0" }
siphon-secrets = { path = "crates/siphon-secrets", version = "0.1.0" }
siphon-tui = { path = "crates/siphon-tui", version = "0.1.0" }
