[package]
name = "siphon-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Secret management with multiple backend support for Siphon"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# Base64 decoding support
base64 = { version = "0.22", optional = true }

# OS Keychain support - use native backends for reliability
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", optional = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", optional = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", optional = true, features = ["linux-native"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["keychain", "onepassword", "env", "file", "base64"]
keychain = ["dep:keyring"]
onepassword = []
env = []
file = []
base64 = ["dep:base64"]
