[package]
name = "siphon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Siphon tunnel server with Cloudflare DNS integration"
repository = "https://github.com/remikalbe/siphon"
readme = "../../README.md"
keywords = ["tunnel", "proxy", "mtls", "server", "cloudflare"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "siphon-server"
path = "src/main.rs"

[dependencies]
siphon-protocol = { workspace = true }
siphon-common = { workspace = true }
siphon-secrets = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
ureq = "3"
rcgen = "0.14.6"
cuid2 = "0.1.4"
