[package]
name = "siphon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Siphon tunnel client - expose local services securely"
repository = "https://github.com/remikalbe/siphon"
readme = "../../README.md"
keywords = ["tunnel", "proxy", "mtls", "cli", "networking"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "siphon"
path = "src/main.rs"

[dependencies]
siphon-protocol = { workspace = true }
siphon-common = { workspace = true }
siphon-secrets = { workspace = true }
siphon-tui = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"
